<resources>
    <string name="app_name">L-Teach-App-Test</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="l_tech">L-TECH</string>
    <string name="sort_by_default">По умолчанию</string>
    <string name="sort_by_date">По дате</string>
    <string name="name_dialog">Сортировка</string>
    <string name="close">close</string>
    <string name="default_dialog">По умолчанию</string>
    <string name="date_dialog">По дате</string>
    <string name="favorite">Избранное</string>
    <string name="showfilter">ShowFilter</string>
    <string name="login">Войти</string>
    <string name="numberphone">NumberPhone</string>
    <string name="ClearNum">ClearNum</string>
    <string name="EnterPass">Введите пароль</string>
    <string name="error_pass">Неверный пароль</string>
    <string name="todo">TODO</string>
    <string name="num_start">+7</string>
    <string name="Phone">Телефон</string>
    <string name="Password">Пароль</string>
</resources>