<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Presentation.Screen.LoginFragment"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/logo_LTECH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/l_tech"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/roboto_variable"
        android:paddingLeft="141dp"
        android:paddingTop="16dp"
        android:paddingRight="141dp"
        android:paddingBottom="16dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintButtonSize" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_LTECH">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Вход в аккаунт"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Phone"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/numLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/edittext_border_selector"
                    android:contentDescription="@string/numberphone">

                    <EditText
                        android:id="@+id/phoneNumberEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:backgroundTint="@android:color/transparent"
                        android:contentDescription="@string/todo"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:minHeight="48dp"
                        android:paddingEnd="48dp"
                        android:text="@string/num_start"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="Autofill,EditableContentDescCheck,LabelFor,RtlSymmetry,VisualLintTextFieldSize" />

                    <ImageButton
                        android:id="@+id/clearPhoneButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:alpha="0.5"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/ClearNum"
                        android:src="@drawable/ic_clear"
                        app:layout_constraintBottom_toBottomOf="@+id/phoneNumberEditText"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/phoneNumberEditText"
                        tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Password"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/passwordLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/edittext_border_selector"
                    android:importantForAccessibility="no">

                    <EditText
                        android:id="@+id/passwordEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:backgroundTint="@android:color/transparent"
                        android:hint="@string/EnterPass"
                        android:inputType="text"
                        android:maxLines="1"
                        android:minHeight="48dp"
                        android:paddingEnd="48dp"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="Autofill,RtlHardcoded,RtlSymmetry,TextFields,VisualLintTextFieldSize" />

                    <ImageButton
                        android:id="@+id/togglePasswordVisibilityButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:background="?attr/selectableItemBackgroundBorderless"

                        android:src="@drawable/ic_eye"
                        app:layout_constraintBottom_toBottomOf="@+id/passwordEditText"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/passwordEditText"
                        tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck,ImageContrastCheck" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/passwordHelperText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_variable"
                    android:paddingStart="4dp"
                    android:text="@string/error_pass"
                    android:textColor="@color/red"
                    android:textSize="12sp"
                    android:visibility="gone"
                    tools:ignore="RtlSymmetry,TextContrastCheck"
                    tools:visibility="visible" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>