<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/rounded_top_corners"
    android:paddingTop="8dp"
    android:paddingBottom="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
            android:layout_width="24dp"
            android:layout_height="4dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_drag_handle_rounded"
            tools:ignore="ImageContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:text="@string/name_dialog"
                android:textColor="?attr/colorOnSurface"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/roboto_variable"/>

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:background="@color/white"
                android:contentDescription="@string/close"
                app:srcCompat="@drawable/ic_close"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@drawable/divider"
        android:showDividers="middle">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableEnd="@drawable/custom_radio_button_indicator"
            android:fontFamily="@font/roboto_variable"
            android:paddingHorizontal="16dp"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:text="@string/default_dialog"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="VisualLintButtonSize" />


        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableEnd="@drawable/custom_radio_button_indicator"
            android:fontFamily="@font/roboto_variable"
            android:paddingHorizontal="16dp"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:text="@string/date_dialog"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="VisualLintButtonSize" />
    </RadioGroup>


</LinearLayout>